--- a/community-amp-catalog.yaml
+++ b/community-amp-catalog.yaml
@@ -64,7 +64,7 @@ entries:
       - llamaindex
       - llama3
       - Trulens
-    git_url: 'https://github.com/bigdata-biz/SuperEllipse-Trulens'
+    git_url: 'https://github.com/ikhwan189/SuperEllipse-Trulens.git'
     is_prototype: true
     is_community: true
     is_new: true
